# fcef

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
examples/: hello.c
include/: fcef.h
src/format/: fcef_reader.c  fcef_validator.c  fcef_writer.c
src/lib/: fcef.c
src/tools/: fcef-dump.c
tests/integration/: test_end_to_end.c  test_os_loader.c
tests/unit/: test_basic.c
